--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "expo": "~49.0.8",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.6",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.2",
+    "@types/styled-components-react-native": "^5.2.1",
     "typescript": "^5.1.3"
   },
   "private": true
