--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-responsive-fontsize": "^0.5.1",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
