Update Register Screen and Other Files

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "expo": "~49.0.8",
     "expo-app-loading": "^2.1.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
-    "styled-components": "^6.0.7",
-    "expo-splash-screen": "~0.20.5"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
