--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@hookform/resolvers": "^3.3.4",
     "expo": "~49.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-splash-screen": "~0.20.5",
@@ -19,7 +20,8 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
