--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@hookform/resolvers": "^3.3.4",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-splash-screen": "~0.20.5",
@@ -20,6 +22,8 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "styled-components": "^6.0.7",
     "yup": "^1.3.3"
   },
